<resources>
    <string name="app_name">OneDroid</string>
    <string name="app_manager">Apps</string>
    <string name="device_info">Device</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="app_manager_search_hint">app or pkg name</string>
    <string name="app_type">App Type</string>
    <string name="app_order">Order</string>
    <string name="app_order_type">Order Type</string>
    <string name="all">All</string>
    <string name="system">System app</string>
    <string name="user">User</string>
    <string name="small_tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="device">Device</string>
    <string name="appearance">Appearance</string>
    <string name="theme_color">Theme Color</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="choose_color">Choose Color</string>
    <string name="custom_color">Custom Color</string>
    <string name="scroll_screenshot">Scroll Screenshot</string>
    <string name="screen_record">Screen Record</string>
    <string name="color_pick_tool">Screen Color Picker</string>
    <string name="text_ocr">Text OCR</string>
    <string name="tools_accessibility_service_description">Supports screenshots, screen recording and other functions of Android Dev Toolbox</string>
    <string name="permission_not_granted">Permission not granted, go to settings</string>
    <string name="floating_button_enable">Floating Button Enabled</string>
    <string name="open_accessibility_service">please open accessibility service</string>
    <string name="save">save apk</string>
    <string name="save_success">Save Success</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="foreground_service">ForegroundService</string>
    <string name="foreground_service_description">Show Foreground Service</string>
    <string name="floating_window_showing">Floating Window is Showing</string>
    <string name="media_projection_in_process">Media projection in progress</string>
    <string name="basic_info">Basic Info</string>
    <string name="activity_info">Activity</string>
    <string name="service_info">Service</string>
    <string name="permission_info">Permission</string>
    <string name="version_name">version name</string>
    <string name="version_code">version code</string>
    <string name="revision_code">revision code</string>
    <string name="first_install_time">first install time</string>
    <string name="gids">GIDS</string>
    <string name="last_update_time">last update time</string>
    <string name="shared_user_id">shared user id</string>
    <string name="data_dir">data dir</string>
    <string name="package_name">package name</string>
    <string name="app_class_name">app class name</string>
    <string name="compile_sdk_version">compile sdk version</string>
    <string name="min_sdk_version">min sdk version</string>
    <string name="not_supported">not supported</string>
    <string name="target_sdk_version">target sdk version</string>
    <string name="native_library_dir">native library dir</string>
    <string name="process_name">process name</string>
    <string name="public_source_dir">public source dir</string>
    <string name="shared_lib_files">shared library files</string>
    <string name="source_dir">source dir</string>
    <string name="uid">uid</string>
    <string name="metadata">metadata</string>
    <string name="key_app_name">app name</string>
    <string name="dir_info">dir info</string>
    <string name="other_info">other info</string>
    <string name="sign_info">signature</string>
    <string name="signature">signature</string>
    <string name="type">type</string>
    <string name="version">version</string>
    <string name="serial_number">serial number</string>
    <string name="subject_dn">subject dn</string>
    <string name="valid_from">valid from</string>
    <string name="valid_until">valid until</string>
    <string name="sign_alg_name">signature algorithm</string>
    <string name="sign_alg_oid">signature algorithm OID</string>
    <string name="sign_alg_params">signature algorithm params</string>
    <string name="cert_sign">cert signature</string>
    <string name="apk_sign_md5">Md5 signature</string>
    <string name="apk_sign_sha1">SHA-1 signature</string>
    <string name="apk_sign_sha256">SHA-256 signature</string>
    <string name="cert_sign_sha256">SHA-256 cert signature</string>
    <string name="class_name">class name</string>
    <string name="target_activity">target activity</string>
    <string name="flags">flags</string>
    <string name="launch_mode">launch mode</string>
    <string name="parent_activity_name">parent activity name</string>
    <string name="max_recents">max recents</string>
    <string name="permission">permission</string>
    <string name="persistable_mode">persistable mode</string>
    <string name="screen_orientation">screen orientation</string>
    <string name="soft_input_mode">soft input mode</string>
    <string name="task_affinity">task affinity</string>
    <string name="ui_options">ui options</string>
    <string name="exported">exported</string>
    <string name="config_changes">config changes</string>
    <string name="receiver">Receiver</string>
    <string name="provider">Provider</string>
    <string name="launch">launch app</string>
    <string name="open_in_settings">open in settings</string>
    <string name="share">share apk</string>
    <string name="uninstall">uninstall</string>
    <string name="launch_fail">launch fail</string>
    <string name="copy">copy</string>
    <string name="mcc">MCC</string>
    <string name="mnc">MNC</string>
    <string name="density">density</string>
    <string name="locale">locale</string>
    <string name="keyboard_type">keyboard type</string>
    <string name="color_mode">color mode</string>
    <string name="font_scale">font scale</string>
    <string name="font_weight_adjustment">font weight adjustment</string>
    <string name="grammatical_gender">grammatical gender</string>
    <string name="keyboard_hidden">keyboard hidden</string>
    <string name="layout_direction">layout direction</string>
    <string name="navigation_type">navigation type</string>
    <string name="screen_layout">screen layout</string>
    <string name="screen_size">screen size</string>
    <string name="smallest_screen_size">smallest screen size</string>
    <string name="touchscreen">touchscreen</string>
    <string name="ui_mode">ui mode</string>
    <string name="null_str">null</string>
    <string name="immersive">immersive</string>
    <string name="multiprocess">multiprocess</string>
    <string name="allow_untrusted_activity_embedding">allow untrusted activity embedding</string>
    <string name="no_history">no history</string>
    <string name="single_user">single user</string>
    <string name="allow_task_reparenting">allow task reparenting</string>
    <string name="always_retain_task_state">always retain task state</string>
    <string name="auto_remove_from_recents">auto remove from recents</string>
    <string name="clear_task_on_launch">clear task on launch</string>
    <string name="enable_vr_mode">enable vr mode</string>
    <string name="exclude_from_recents">exclude from recents</string>
    <string name="finish_on_close_system_dialogs">finish on close system dialogs</string>
    <string name="finish_on_task_launch">finish on task launch</string>
    <string name="hardware_accelerated">hardware accelerated</string>
    <string name="prefer_minimal_post_processing">prefer minimal post processing</string>
    <string name="relinquish_task_identity">relinquish task identity</string>
    <string name="resume_while_pausing">resume while pausing</string>
    <string name="state_not_needed">state not needed</string>
    <string name="single_top">single top</string>
    <string name="standard">standard</string>
    <string name="single_task">single task</string>
    <string name="single_instance">single instance</string>
    <string name="single_instance_per_task">single instance per task</string>
    <string name="persist_root_only">persist root only</string>
    <string name="persist_across_reboots">persist across reboots</string>
    <string name="persist_never">persist never</string>
    <string name="unspecified">unspecified</string>
    <string name="landscape">landscape</string>
    <string name="portrait">portrait</string>
    <string name="orientation_user">user</string>
    <string name="behind">behind</string>
    <string name="sensor">sensor</string>
    <string name="no_sensor">no sensor</string>
    <string name="sensor_landscape">sensor landscape</string>
    <string name="sensor_portrait">sensor portrait</string>
    <string name="reverse_landscape">reverse landscape</string>
    <string name="reverse_portrait">reverse portrait</string>
    <string name="full_sensor">full sensor</string>
    <string name="user_landscape">user landscape</string>
    <string name="user_portrait">user portrait</string>
    <string name="full_user">full user</string>
    <string name="locked">locked</string>
    <string name="adjust_pan">adjust pan</string>
    <string name="adjust_nothing">adjust nothing</string>
    <string name="adjust_unspecified">adjust unspecified</string>
    <string name="adjust_resize">adjust resize</string>
    <string name="state_hidden">state hidden</string>
    <string name="state_visible">state visible</string>
    <string name="state_unchanged">state unchanged</string>
    <string name="state_unspecified">state unspecified</string>
    <string name="state_always_hidden">state always hidden</string>
    <string name="state_always_visible">state always visible</string>
    <string name="split_action_bar_when_narrow">split action bar when narrow</string>
    <string name="required_display_category">required diaplay category</string>
    <string name="color_mode_default">default</string>
    <string name="color_mode_wide_color_gamut">wide color gamut</string>
    <string name="color_mode_hdr">hdr</string>
    <string name="forground_service_type">forground service type</string>
    <string name="foreground_service_type_short_service">short service</string>
    <string name="foreground_service_type_camera">camera</string>
    <string name="foreground_service_type_health">health</string>
    <string name="foreground_service_type_microphone">microphone</string>
    <string name="foreground_service_type_location">location</string>
    <string name="foreground_service_type_connected_device">connected device</string>
    <string name="foreground_service_type_data_sync">data sync</string>
    <string name="foreground_service_type_manifest">manifest</string>
    <string name="foreground_service_type_media_playback">media playback</string>
    <string name="foreground_service_type_media_projection">media projection</string>
    <string name="foreground_service_type_phone_call">phone call</string>
    <string name="foreground_service_type_remote_messaging">remote messaging</string>
    <string name="foreground_service_type_special_use">special use</string>
    <string name="foreground_service_type_system_exempted">system exempted</string>
    <string name="foreground_service_type_none">none</string>
    <string name="external_service">external service</string>
    <string name="use_app_zygote">use app zygote</string>
    <string name="allow_shared_isolated_process">allow shared isolated process</string>
    <string name="isolated_process">isolated process</string>
    <string name="stop_with_task">stop with task</string>
    <string name="custom_permission">custom permission</string>
    <string name="sort_type_app_name">app name</string>
    <string name="sort_type_install_time">install time</string>
    <string name="sort">sort</string>
    <string name="app_filter">filter</string>
    <string name="layout_inspect">layout inspect</string>
</resources>