<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_filter"
        android:textAppearance="?textAppearanceTitleMedium" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnGroupAppType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        app:checkedButton="@id/btnAll"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnAll"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <Button
            android:id="@+id/btnSystem"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system" />

        <Button
            android:id="@+id/btnUser"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sort"
        android:textAppearance="?textAppearanceTitleMedium" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnGroupSortType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        app:checkedButton="@id/btnSortTypeAppName"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnSortTypeAppName"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_app_name" />

        <Button
            android:id="@+id/btnSortTypeInstallTime"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type_install_time" />


    </com.google.android.material.button.MaterialButtonToggleGroup>


</LinearLayout>